--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           </li>
 
           <li class="social-item">
-            <a href="#" class="social-link">
+            <a href="https://www.upwork.com/freelancers/dsolanki" class="social-link">
               <img src="https://upload.wikimedia.org/wikipedia/commons/0/0e/Upwork-logo.png" alt="Upwork" width="24" height="24">
             </a>
           </li>
